--- a/.github/workflows/on_push_master.yaml
+++ b/.github/workflows/on_push_master.yaml
@@ -32,13 +32,13 @@ jobs:
       matrix:
         go: [ '1.17' ]
     steps:
-      - name: "Git Checkout"
-        uses: actions/checkout@v2
-      - name: create database
-        run: |
-          apt-get update
-          apt-get install -y mariadb-client
-          mysql --host mysql -uroot -proot -e "CREATE DATABASE IF NOT EXISTS tibo_database_test"
+#      - name: "Git Checkout"
+#        uses: actions/checkout@v2
+#      - name: create database
+#        run: |
+#          apt-get update
+#          apt-get install -y mariadb-client
+#          mysql --host mysql -uroot -proot -e "CREATE DATABASE IF NOT EXISTS tibo_database_test"
       - name: running unitest
         run: |
           go mod tidy
