--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - 3305:3306
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
-      MYSQL_USER: ${DB_HOST_DOCKER}
+      MYSQL_USER: dockerDB
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
 
