--- a/.github/workflows/on_push_master.yaml
+++ b/.github/workflows/on_push_master.yaml
@@ -1,45 +1,95 @@
-name: on-push-master
+name: AWS EC2 CI/CD
 
 on:
-  pull_request:
-    branches:
-      - 'master'
   push:
     branches:
-      - 'master'
-      - 'development'
-      - 'unit-testing'
-      - 'feature/*'
+      - "master"
+  pull_request:
+    branches:
+      - "master"
 
 jobs:
-  api-test:
-    name: api test - run unitest on action
+  unit-test:
+    name: "Unit Testing"
     runs-on: ubuntu-latest
-    container: golang:1.17
-    services:
-      mysql:
-        image: mysql:latest
-        env:
-#          MYSQL_ROOT_PASSWORD: password
-          MYSQL_ALLOW_EMPTY_PASSWORD: 1
-          MYSQL_USER: ${DB_HOST_DOCKER}
-          MYSQL_PASSWORD: ${DB_PASSWORD}
-          MYSQL_DATABASE: ${DB_NAME}
-        ports:
-          - 3305:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    strategy:
-      matrix:
-        go: [ '1.17' ]
     steps:
-      - name: "Git Checkout"
-        uses: actions/checkout@v2
-      - name: create database
+      - uses: actions/checkout@v2
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+      - name: Running Unit-Test
+        run: go test ./... -cover
+
+  build-push-docker:
+    name: Build docker image then push to docker hub
+    runs-on: ubuntu-latest
+    needs: Unit-Test
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build Docker Image
+        run: docker build -t hencya/tibo-api:latest .
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push image to Docker Hub
+        run: docker push hencya/tibo-api:latest
+
+  deployment-ec2-aws:
+    name: Deploy to AWS EC2
+    runs-on: ubuntu-latest
+    needs: build-push-docker
+    steps:
+      - uses: actions/checkout@v2
+      - name: SSH Config
+        env:
+          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
         run: |
-          apt-get update
-          apt-get install -y mariadb-client
-          mysql --host mysql -uroot -proot -e "CREATE DATABASE IF NOT EXISTS tibo_database_test"
-      - name: running unitest
+          mkdir -p ~/.ssh/
+          echo "$SSH_KEY" > ~/.ssh/tibo.pem
+          chmod 400 ~/.ssh/tibo.pem
+          cat >>~/.ssh/config <<END
+          Host development
+            HostName $SSH_HOST
+            User $SSH_USER
+            IdentityFile ~/.ssh/tibo.pem
+            StrictHostKeyChecking=no
+          END
+      - name: Connect to EC2 instance & run Docker image from registry
+        env:
+          PORT: ${{ secrets.PORT }}
+          CONTEXT_TIMEOUT: ${{ secrets.CONTEXT_TIMEOUT }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          JWT_EXPIRE: ${{ secrets.JWT_EXPIRE }}
         run: |
-          go mod tidy
-          go test ./... -cover -failfast
+          ssh development 'export PORT='"'$PORT'"' && \
+          export DB_USER='"'$DB_USER'"' && \
+          export CONTEXT_TIMEOUT='"'$CONTEXT_TIMEOUT'"' && \
+          export DB_PASSWORD='"'$DB_PASSWORD'"' && \
+          export DB_HOST='"'$DB_HOST'"' && \
+          export DB_PORT='"'$DB_PORT'"' && \
+          export DB_NAME='"'$DB_NAME'"' && \
+          export JWT_SECRET='"'$JWT_SECRET'"' && \
+          export JWT_EXPIRE='"'$JWT_EXPIRE'"' && \
+          docker rm -vf tibo-api && \
+          docker pull hencya/tibo-api:latest && \
+          docker run -d -p 8080:8080 --name tibo-api \
+          -e PORT=$PORT \
+          -e CONTEXT_TIMEOUT=$CONTEXT_TIMEOUT \
+          -e DB_HOST=$DB_HOST \
+          -e DB_PORT=$DB_PORT \
+          -e DB_USER=$DB_USER \
+          -e DB_PASSWORD=$DB_PASSWORD \
+          -e DB_NAME=$DB_NAME \
+          -e JWT_SECRET=$JWT_SECRET \
+          -e JWT_EXPIRE=$JWT_EXPIRE \
+          hencya/tibo-api:latest'
